[package]
name = "oidc_agent_rs"
version = "0.2.11"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Unix only oidc-agent library for Rust."
repository = "https://github.com/Nithe14/oidc-agent-rs"
readme = "README.md"
authors = [ "Wiktor Nastał <imnithe@gmail.com>" ]

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", optional = true, features = ["net", "io-util"] }
url = { version = "2.5.4", features = ["serde"] }

[features]
default = []
async = ["dep:tokio"]
