[package]
name = "oidc_agent_rs"
version = "0.2.13"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Unix only oidc-agent library for Rust."
repository = "https://github.com/Nithe14/oidc-agent-rs"
readme = "README.md"
authors = [ "Wiktor Nastał <imnithe@gmail.com>" ]

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", optional = true, features = ["net", "io-util"] }
url = { version = "2.5.8", features = ["serde"] }

[features]
default = []
async = ["dep:tokio"]
